openmediavault (6.0.7-1) unstable; urgency=low

  *

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 Dec 2021 21:37:01 +0100

openmediavault (6.0.6-1) unstable; urgency=low

  * Various improvements.
  * Fix PAM faillock issue related to missing directory.
  * Issue #618: Remove backslash in Monit notification email.
  * Issue #1159: Add enhanced server-side copy offload for SMB
    shares residing on BTRFS file systems.
  * Issue #1160: Improve S.M.A.R.T. overall status assessment.
  * Issue #1166: SMB user password is not updated.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 04 Dec 2021 11:04:56 +0100

openmediavault (6.0.5-3) unstable; urgency=low

  * Update locale files.
  * Improved IPv6 detection. This will fix various issues, e.g.
    DNS issues and undeliverable emails with Postfix.
  * Issue #1151: Increase user password strength.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 26 Nov 2021 13:15:00 +0100

openmediavault (6.0.4-3) unstable; urgency=low

  * Various improvements.
  * Fix lock file issue in SMB recycle dir script.
  * Fixed a routing problem in the 'S.M.A.R.T.' and 'RAID Management'
    pages.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 18 Nov 2021 01:10:46 +0100

openmediavault (6.0.3-1) unstable; urgency=low

  * Various improvements.
  * Fix a bug in 'Storage | Disks' page when clicking an action
    button.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 Nov 2021 21:15:30 +0100

openmediavault (6.0.2-1) unstable; urgency=low

  * Replace CLI tool omv-update by omv-upgrade.
  * Fixed a routing problem in the workbench that only
    affected plugins.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 14 Nov 2021 20:11:25 +0100

openmediavault (6.0.1-1) unstable; urgency=low

  * Fix issue when editing a power management task.
  * Issue #1127: Support ed25519 SSH public keys in the user
    settings dialog.