@@ -1,6 +1,7 @@
 openmediavault (6.0.7-1) unstable; urgency=low
 
-  *
+  * Prevent the deactivation of SMART monitoring for devices
+    that are connected to a scheduled job.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 27 Dec 2021 21:37:01 +0100
 
